# VolumetricRaytracer

./: .gitignore  LICENSE  README.md
VolumetricRaytracer/: CMakeLists.txt
VolumetricRaytracer/Dependencies/DirectXTex/: CMakeLists.txt
VolumetricRaytracer/Dependencies/DirectXTex/DirectXTex/: BCDirectCompute.cpp
VolumetricRaytracer/VolumetricRaytracer/: CMakeLists.txt  VolumeRaytracer.cpp
VolumetricRaytracer/VolumetricRaytracer/App/Private/: RendererEngineInstance.cpp
VolumetricRaytracer/VolumetricRaytracer/App/Public/: RendererEngineInstance.h
VolumetricRaytracer/VolumetricRaytracer/Core/: CMakeLists.txt
VolumetricRaytracer/VolumetricRaytracer/Core/Private/: AABB.cpp  Color.cpp  Logger.cpp  Material.cpp  MathHelpers.cpp  Object.cpp  Quat.cpp  SerializationManager.cpp  StringHelpers.cpp  TickManager.cpp  Vector.cpp
VolumetricRaytracer/VolumetricRaytracer/Core/Private/Textures/: RenderTarget.cpp  Texture.cpp  Texture2D.cpp  Texture3D.cpp  Texture3DFloat.cpp  TextureCube.cpp
VolumetricRaytracer/VolumetricRaytracer/Core/Public/: AABB.h  Color.h  ISerializable.h  Logger.h  Material.h  MathHelpers.h  Object.h  Quat.h  SerializationManager.h  StringHelpers.h  TickManager.h  Vector.h
VolumetricRaytracer/VolumetricRaytracer/Core/Public/Textures/: RenderTarget.h  Texture.h  Texture2D.h  Texture3D.h  Texture3DFloat.h  TextureCube.h
VolumetricRaytracer/VolumetricRaytracer/Engine/: CMakeLists.txt
VolumetricRaytracer/VolumetricRaytracer/Engine/Private/: Engine.cpp
VolumetricRaytracer/VolumetricRaytracer/Engine/Public/: Engine.h  EngineConstants.h  IEngineInstance.h
VolumetricRaytracer/VolumetricRaytracer/Renderer/: CMakeLists.txt
VolumetricRaytracer/VolumetricRaytracer/Renderer/DX/Private/: DXConstants.cpp  DXDescriptorHeap.cpp  DXHelper.cpp  DXLightFactory.cpp  DXRenderTarget.cpp  DXRenderer.cpp  DXTexture2D.cpp  DXTexture3D.cpp  DXTexture3DFloat.cpp  DXTextureCube.cpp  RDXLevelObject.cpp  RDXScene.cpp  RDXVoxelVolume.cpp
VolumetricRaytracer/VolumetricRaytracer/Renderer/DX/Public/: DXConstants.h  DXDescriptorHeap.h  DXHelper.h  DXLightFactory.h  DXRenderTarget.h  DXRenderer.h  DXRendererInterfaces.h  DXShaderTypes.h  DXTexture2D.h  DXTexture3D.h  DXTexture3DFloat.h  DXTextureCube.h  RDXLevelObject.h  RDXScene.h  RDXVoxelVolume.h
VolumetricRaytracer/VolumetricRaytracer/Renderer/DX/Resources/Shaders/: Raytracing.hlsl  RaytracingHlsl.h  Raytracing_Cube.hlsl  Raytracing_Cube_NoTex.hlsl  Raytracing_Cube_NoTex_Unlit.hlsl  Raytracing_Cube_Unlit.hlsl  Raytracing_NoTex.hlsl  Raytracing_NoTex_Unlit.hlsl  Raytracing_Unlit.hlsl
VolumetricRaytracer/VolumetricRaytracer/Renderer/DX/Resources/Shaders/Compiled/: Raytracing.cso  Raytracing.hlsl.h  Raytracing_Cube.cso  Raytracing_Cube_NoTex.cso  Raytracing_Cube_NoTex_Unlit.cso  Raytracing_Cube_Unlit.cso  Raytracing_NoTex.cso  Raytracing_NoTex_Unlit.cso  Raytracing_Unlit.cso
VolumetricRaytracer/VolumetricRaytracer/Renderer/DX/Resources/Shaders/Include/: Constants.hlsli  Debugging.hlsli  Lighting.hlsli  Parameters.hlsli  Quaternion.hlsli  Ray.hlsli  Textures.hlsli  Voxel.hlsli
VolumetricRaytracer/VolumetricRaytracer/Renderer/Private/: RScene.cpp  RenderTarget.cpp  Renderer.cpp  RendererFactory.cpp  Texture.cpp  TextureCube.cpp  TextureFactory.cpp
VolumetricRaytracer/VolumetricRaytracer/Renderer/Public/: RScene.h  RenderTarget.h  Renderer.h  RendererFactory.h  TextureCube.h  TextureFactory.h
VolumetricRaytracer/VolumetricRaytracer/Scene/: CMakeLists.txt
VolumetricRaytracer/VolumetricRaytracer/Scene/Private/: Camera.cpp  DensityGenerator.cpp  LevelObject.cpp  Light.cpp  PointLight.cpp  Scene.cpp  SpotLight.cpp  VoxelObject.cpp
VolumetricRaytracer/VolumetricRaytracer/Scene/Public/: Camera.h  DensityGenerator.h  LevelObject.h  Light.h  PointLight.h  RenderableObject.h  Scene.h  SpotLight.h  VoxelObject.h
VolumetricRaytracer/VolumetricRaytracer/UI/: CMakeLists.txt
VolumetricRaytracer/VolumetricRaytracer/UI/Private/: MessageBox.cpp  OpenFileDialog.cpp  Window.cpp  WindowFactory.cpp  WindowRenderTargetFactory.cpp
VolumetricRaytracer/VolumetricRaytracer/UI/Public/: MessageBox.h  OpenFileDialog.h  Window.h  WindowFactory.h  WindowRenderTargetFactory.h
VolumetricRaytracer/VolumetricRaytracer/UI/Public/Input/: InputTypes.h
VolumetricRaytracer/VolumetricRaytracer/UI/Win/Private/: Win32Window.cpp
VolumetricRaytracer/VolumetricRaytracer/UI/Win/Public/: Win32Resources.h  Win32Window.h
VolumetricRaytracer/VolumetricRaytracer/UI/Win/Resources/: WindowResources.rc
VolumetricRaytracer/VolumetricRaytracer/Voxel/: CMakeLists.txt
VolumetricRaytracer/VolumetricRaytracer/Voxel/Private/: Octree.cpp  Voxel.cpp  VoxelScene.cpp  VoxelVolume.cpp
VolumetricRaytracer/VolumetricRaytracer/Voxel/Public/: Octree.h  Voxel.h  VoxelScene.h  VoxelVolume.h
VolumetricRaytracer/Voxelizer/: CMakeLists.txt
VolumetricRaytracer/Voxelizer/Private/: FileStreamReader.cpp  GLTFImporter.cpp  SceneConverter.cpp  TextureLibraryImporter.cpp  VolumeConverter.cpp  Voxelizer.cpp
VolumetricRaytracer/Voxelizer/Public/: FileStreamReader.h  GLTFImporter.h  SceneConverter.h  SceneInfo.h  TextureLibraryImporter.h  VolumeConverter.h
VolumetricRaytracer/ext/d3dx12/src/d3dx12-stamp/: d3dx12-download-Debug-impl.cmake  d3dx12-download-Debug.cmake  d3dx12-urlinfo.txt  download-d3dx12.cmake  extract-d3dx12.cmake
VolumetricRaytracer/ext/d3dx12/tmp/: d3dx12-cfgcmd.txt
VolumetricRaytracer/ext/spdlog/src/spdlog-build/: CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  rules.ninja
VolumetricRaytracer/ext/spdlog/src/spdlog-stamp/: spdlog-download-Debug.cmake
VolumetricRaytracer/ext/spdlog/tmp/: spdlog-cfgcmd.txt  spdlog-gitclone.cmake
